feat(app): Validation framework for incoming requests
Added go-playground/validator as the validator for incoming requests

Added custom validation tags(x-oapi-codegen-extra-tags) wherever applicable

Generated the server and models
